# tree-sitter-masm

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_masm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMASMTests/: TreeSitterMASMTests.swift
queries/: highlights.scm  indents.scm  locals.scm  outline.scm  runnables.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: assert.txt  assert_with_error.txt  assert_without_error.txt  constants.txt  docs.txt  entrypoint.txt  hex_immedidate.txt  import.txt  import_fully_qualified.txt  import_with_alias.txt  integer_immediate.txt  procedure_with_expr_annotation.txt  procedure_with_key_value_annotation.txt  procedure_with_marker_annotation.txt  special_symbol.txt  word_immediate.txt
